--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import './variables.css'; 
+*{
+  box-sizing: border-box;
+  margin: 0; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: var(--font); 
+  background-color: var(--bg);
+  color: #fff; 
+}
+
+main {
+  width: 100%; 
+  height: 100vh; 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: flex-start;
+  gap: 1.5rem; 
+  padding: 4rem 1rem; 
+}
+
+@media (min-width: 700px) {
+  main{
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center;
+  }
+
+  .timeCards{
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem; 
+  }
+
+  .timeCards div{
+    min-width: 200px; 
+  }
 }
